--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,59 +8,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  <style>
-  body {
-    background-image: url({{url_for('static', filename="images/"+background)}});
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-  .circle {
-     border-radius: 50%;
-     width: 55px;
-     height: 55px;
-   }
-
-   .w3-lobster {
-     font-family: "Lobster", serif;
-   }
-
-   body, h1, h2, h3, h4, h5, h6  {
-     font-family: 'Baloo 2', cursive;
-   }
-
-   .flip-card {
-    perspective: 1000px;
-  }
-
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-
-
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-
-  .flip-card-back {
-    transform: rotateY(180deg);
-  }
-
-    </style>
-    <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type = "image/x-icon">
+    <link rel="stylesheet" href="{{url_for('static', filename="main.css")}}" type="text/css">
+    <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type="image/x-icon">
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
-<body>
+<body style="background-image: url({{url_for('static', filename="images/"+background)}});">
   <div class="w3-container w3-text-white" style="height:72px; background-color:{{theme_color}}">
     <h3 class="w3-right w3-xxlarge"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:32px" alt="Coin"></h3>
   </div>
