--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -127,7 +127,7 @@
               <span onclick="this.parentElement.style.display='none'; ${hiding_code}" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
             </div>
             `;
-      } elseif (category == 'error') {
+      } else if (category == 'error') {
           document.getElementById('messages').innerHTML += `
             <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
               <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
@@ -135,7 +135,7 @@
               <span onclick="this.parentElement.style.display='none'; ${hiding_code}" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
             </div>
             `;
-      } elseif (category == "request") {
+      } else if (category == "request") {
           assert(message_id);
           document.getElementById('messages').innerHTML += `
             <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small small" style="margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
@@ -181,9 +181,6 @@
     socket.on('refresh', function() {
         window.location = window.location;
     });
-    socket.on('select_color', function(color_id) {
-        socket.emit('select_color', color_id);
-    });
     function update_choice(obj) {
       if (typeof prev != 'undefined') 
         prev.parentNode.classList.remove('checked');
@@ -192,6 +189,9 @@
     }
     function hide_message(message_id) {
       socket.emit('hide_message', message_id);
+    }
+   function select_color(color_id) {
+      socket.emit('select_color', color_id);
     }
     function answer_flouze_request(answer) {
       socket.emit('answer_flouze_request', answer);
