--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -9,7 +9,7 @@
 <div class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column;">
 {% for color, owner in zip(game.colors, game.owner) %}
 <div style="flex-grow: 1; margin:2%;">
-    <button onclick="select_color({{color['id']}});" id={{color["name"]}} type="submit" name="couleurs" value={{ color["id"] }} class="w3-padding-large w3-round-large" style="width:100%; height:100%; background-color:{{ color["primary"] }}; border:4px solid {{ color["secondary"] }}">
+    <button onclick="select_color({{color['id']}});" id={{color["name"]}} type="submit" name="couleurs" value={{ color["id"] }} class="w3-round-large" style="width:100%; height:100%; background-color:{{ color["primary"] }}; border:4px solid {{ color["secondary"] }}">
     {% if owner %}
     {{ owner.name }}
     {% else %}
